--- a/tekton_ci-project/pipeline-run.yaml
+++ b/tekton_ci-project/pipeline-run.yaml
@@ -1,3 +1,12 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: docker-credentials
+data:
+  config.json: efuJAmF1...
+
+---
+
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
@@ -17,6 +26,11 @@ spec:
         resources:
           requests:
             storage: 1Gi
+  - name: docker-credentials
+    secret:
+      secretName: docker-credentials
   params:
   - name: repo-url
     value: https://github.com/google/docsy-example.git
+  - name: image-reference
+    value: container.registry.com/sublocation/my_app:version
