--- a/tekton-argo-flux/event-listener.yaml
+++ b/tekton-argo-flux/event-listener.yaml
@@ -9,7 +9,7 @@ spec:
     - name: clone-build-push-trigger
       interceptors:
         - ref:
-            name: "github-el-clone-build-push-eventlistener"
+            name: "github"
           params:
           - name: "secretRef"
             value:
