chore: add argocd config and tekton config

--- a/tekton-argo-flux/pipeline.yaml
+++ b/tekton-argo-flux/pipeline.yaml
@@ -15,6 +15,8 @@ spec:
     type: string
   - name: dockerfile
     type: string
+  - name: application-name
+    type: string
   workspaces:
   - name: shared-data
   - name: docker-credentials
@@ -39,6 +41,17 @@ spec:
       workspace: docker-credentials
     params:
     - name: IMAGE
-      value: $(params.image-reference):test-1
+      value: $(params.image-reference):$(params.tag-image)
     - name: DOCKERFILE
       value: $(params.dockerfile)
+  - name: sync-application
+    runAfter: ["build-push"]
+    taskRef:
+        name: argocd-task-sync-and-wait
+    params:
+        - name: application-name
+          value: $(params.application-name)
+        - name: tag-image
+          value: $(params.tag-image)
+        - name: flags
+          value: --insecure # needed in this example only because the Argo CD server is locally hosted
