--- a/tekton-argo-flux/triggers.yaml
+++ b/tekton-argo-flux/triggers.yaml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
-  name: clone-build-push-trigger-template
+  name: clone-build-push-deploy-argo-trigger-template
 spec:
   params:
   - name: tag-image
@@ -17,6 +17,21 @@ spec:
       podTemplate:
         securityContext:
           fsGroup: 65532
+      resources:
+          - name: source
+            resourceSpec:
+              type: git
+              params:
+                - name: repo-url
+                  value: https://github.com/franck-art/tekton-argocd-fluxcd.git
+                - name: image-reference
+                  value: europe-west1-docker.pkg.dev/poc-franck/hello-tekton-image/tekton-hello
+                - name: tag-image
+                  value: $(tt.params.tag-image)
+                - name: dockerfile
+                  value: ./tekton-argo-flux/hello/Dockerfile
+                - name: application-name
+                  value: hello-ornikar-test-interview
       workspaces:
       - name: shared-data
         volumeClaimTemplate:
@@ -30,23 +45,14 @@ spec:
         secret:
           secretName: docker-credentials
       serviceAccountName: tekton-sa
-      params:
-      - name: repo-url
-        value: https://github.com/franck-art/tekton-argocd-fluxcd.git
-      - name: image-reference
-        value: europe-west1-docker.pkg.dev/poc-franck/hello-tekton-image/tekton-hello
-      - name: tag-image
-        value: $(tt.params.tag-image)
-      - name: dockerfile
-        value: ./tekton-argo-flux/hello/Dockerfile
 
 --- 
 
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerBinding
 metadata:
-  name: clone-build-push-trigger-binding
+  name: clone-build-push-deploy-argotrigger-binding
 spec: 
   params:
   - name: tag-image
-    value: test-1
+    value: $(body.pull_request.head.sha)
