--- a/tekton-argo-flux/argo-task.yaml
+++ b/tekton-argo-flux/argo-task.yaml
@@ -29,24 +29,40 @@ spec:
       description: the image tag to use
       type: string
     - name: flags
-      default: --
+      default: --insecure
       type: string
     - name: argocd-version
       default: v2.11.3
       type: string
   stepTemplate:
-    envFrom:
-      - configMapRef:
-          name: argocd-env-configmap  # used for server address
-      - secretRef:
-          name: argocd-env-secret  # used for authentication (username/password or auth token)
+    # envFrom:
+    #   - configMapRef:
+    #       name: argocd-env-configmap  # used for server address
+    #   - secretRef:
+    #       name: argocd-env-secret  # used for authentication (username/password or auth token)
+    serviceAccountName: tekton-sa
+    annotations:
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/role: "tekton-argocd"
+        vault.hashicorp.com/agent-inject-secret-config: "secret/data/platform/argocd"
+        # Environment variable export template
+        vault.hashicorp.com/agent-inject-template-config: |
+          {{- with secret "secret/data/platform/argocd" -}}
+            export ARGOCD_PASSWORD="{{ .Data.data.ARGOCD_PASSWORD }}"
+            export ARGOCD_USERNAME="{{ .Data.data.ARGOCD_USERNAME }}"
+            export ARGOCD_SERVER="{{ .Data.data.ARGOCD_SERVER }}"
+          {{- end }}
+
+
   steps:
     - name: login
       image: quay.io/argoproj/argocd:$(params.argocd-version)
       script: |
+        set -e
+        source /vault/secrets/config
         if [ -z "$ARGOCD_AUTH_TOKEN" ]; then
-          yes | argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD";
+          yes | argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD" "$(params.flags)";
         fi
-        argocd app set "$(params.application-name)" --parameter image.tag="$(params.tag-image)"
+        argocd app set "$(params.application-name)" --parameter image.tag="$(params.tag-image)" "$(params.flags)"
         argocd app sync "$(params.application-name)" --revision "$(params.revision)" "$(params.flags)"
         argocd app wait "$(params.application-name)" --health "$(params.flags)"
