--- a/tekton-argo-flux/hello/Dockerfile
+++ b/tekton-argo-flux/hello/Dockerfile
@@ -2,7 +2,9 @@ FROM node:19-alpine
 
 WORKDIR /hello
 
-ADD . /hello/
+ADD src/ /hello/
+ADD package.json /hello/
+ADD .editorconfig /hello/
 
 RUN yarn install
 
