--- a/tekton-argo-flux/hello/Dockerfile
+++ b/tekton-argo-flux/hello/Dockerfile
@@ -2,9 +2,7 @@ FROM node:20.15.0-alpine3.20
 
 WORKDIR /hello
 
-ADD src/ /hello/
-ADD package.json /hello/
-ADD .editorconfig /hello/
+ADD . .
 
 RUN yarn install
 
