--- a/tekton-argo-flux/pipeline.yaml
+++ b/tekton-argo-flux/pipeline.yaml
@@ -15,6 +15,8 @@ spec:
     type: string
   - name: dockerfile
     type: string
+  - name: context
+    type: string
   - name: application-name
     type: string
   workspaces:
@@ -44,6 +46,8 @@ spec:
       value: $(params.image-reference):$(params.tag-image)
     - name: DOCKERFILE
       value: $(params.dockerfile)
+    - name: CONTEXT
+      value: $(params.context)
   - name: sync-application
     runAfter: ["build-push"]
     taskRef:
