--- a/tekton-argo-flux/hello/Dockerfile
+++ b/tekton-argo-flux/hello/Dockerfile
@@ -2,7 +2,11 @@ FROM node:20.15.0-alpine3.20
 
 WORKDIR /hello
 
-ADD . .
+ADD src /hello/src
+
+ADD entrypoint.sh /hello
+
+ADD package.json /hello
 
 RUN yarn install 
 
